--- a/css/forgot-username.css
+++ b/css/forgot-username.css
@@ -254,7 +254,7 @@ footer p {
 
 @media (max-width: 767.98px) {
   .background-auth {
-    height: 90vh;
+    height: 82vh;
     background-size: contain;
     align-items: flex-start;
   }
@@ -272,6 +272,10 @@ footer p {
     display: flex;
     flex-direction: column;
     row-gap: 16px;
+  }
+
+  footer {
+    padding-top: 0;
   }
 }
 
